package com.tienda;

// Clase de entrada: solo presenta el proyecto, no tiene logica.
// La demo y las verificaciones estan en TestRunner.
public class Main {
    public static void main(String[] args) {
        System.out.println("================================================");
        System.out.println("  TIENDA ONLINE - Strategy + Chain + SOLID (MVC)");
        System.out.println("================================================");
        System.out.println();
        System.out.println("La demo (PARTE 1, PARTE 2 y DESAFIO) y las");
        System.out.println("verificaciones estan en com.tienda.TestRunner.");
        System.out.println();
        System.out.println("Ejecutar:  test.bat   o   java -cp out com.tienda.TestRunner");
    }
}