@startuml Tienda Strategy + Chain + SOLID MVC
skinparam classAttributeIconSize 0
title TIENDA ONLINE - Strategy + Chain + SOLID + MVC

' ============ DOMAIN ============
package "domain (contratos)" {
  class Compra {
    - precioInicial: double
    - cantidadProductos: int
    - estrategias: List<EstrategiaDescuento>
    + agregarEstrategia(e): Compra
  }
  class Pedido {
    + idPedido: String
    + precioFinal: double
    + aprobado: Boolean
    + pasos: List<PasoValidacion>
    + registrarPaso(nombre, ok, motivo)
    + aprobar()
    + rechazar(handler, motivo)
  }
  interface EstrategiaDescuento {
    + aplicar(compra: Compra, precioActual: double): double
    + describir(): String
  }
  abstract class Handler {
    - siguiente: Handler
    + setSiguiente(h): Handler
    + manejar(pedido): boolean
    # validar(pedido): ResultadoValidacion {abstract}
    # nombre(): String {abstract}
  }
  class ResultadoValidacion {
    - ok: boolean
    - motivo: String
  }
  Compra o-- "0..*" EstrategiaDescuento : usa
  Pedido --> ResultadoValidacion : registra pasos
}

' ============ SERVICES ============
package "services (reglas de negocio)" {
  class ClienteComun
  class ClientePremium
  class ClienteVip
  class DescuentoPorCantidad
  class EnvioRetiroSucursal
  class EnvioNormal
  class EnvioExpress
  class PromocionPorcentual
  class DescuentoBlackFriday
  class CalculoPrecioService {
    + calcular(compra: Compra): double
  }
  class ValidarCliente
  class ValidarStock
  class ValidarPago
  class ValidarLimiteCompra
  class ValidacionPedidoService {
    + procesar(pedido): boolean
  }
  EstrategiaDescuento <|.. ClienteComun
  EstrategiaDescuento <|.. ClientePremium
  EstrategiaDescuento <|.. ClienteVip
  EstrategiaDescuento <|.. DescuentoPorCantidad
  EstrategiaDescuento <|.. EnvioRetiroSucursal
  EstrategiaDescuento <|.. EnvioNormal
  EstrategiaDescuento <|.. EnvioExpress
  EstrategiaDescuento <|.. PromocionPorcentual
  EstrategiaDescuento <|.. DescuentoBlackFriday
  CalculoPrecioService ..> Compra : calcula precioFinal
  Handler <|-- ValidarCliente
  Handler <|-- ValidarStock
  Handler <|-- ValidarPago
  Handler <|-- ValidarLimiteCompra
  Handler --> Handler : siguiente
  ValidacionPedidoService o-- Handler : arma cadena
  ValidacionPedidoService ..> Pedido : valida
}

' ============ DAO ============
package "dao (persistencia)" {
  interface PedidoDAO {
    + guardar(pedido)
    + buscarPorId(id): Pedido
    + listar(): List<Pedido>
  }
  class PedidoDAOMemoria
  PedidoDAO <|.. PedidoDAOMemoria
}

' ============ VIEW / CONTROLLER ============
package "view" {
  class ConsolaView {
    + mostrarTitulo(titulo)
    + mostrarCalculoCompra(compra)
    + mostrarResultadoPedido(pedido)
    + mostrarPedidosPersistidos(pedidos)
  }
}

package "controller" {
  class TiendaController {
    + calcularPrecioCompra(compra): double
    + procesarPedido(pedido, service): boolean
    + mostrarPedidosPersistidos()
  }
  TiendaController --> CalculoPrecioService
  TiendaController --> ValidacionPedidoService
  TiendaController --> PedidoDAO
  TiendaController --> ConsolaView : muestra resultados
}

' ============ CLIENT ============
class Main
Main ..> TiendaController : wiring

note bottom of ConsolaView
  Unica capa que hace print.
end note

note bottom of TiendaController
  Sin reglas de negocio:
  solo orquesta services y view.
end note

@enduml